--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,10 @@
     <title>欢迎</title>
 </head>
 <body>
-<a>my love</a>
+<form action="try" method="post" >
+
+
+    <input  type="submit" value="注册" >
+</form>
 </body>
 </html>
