--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -1,20 +1,60 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>html5调用摄像头实现拍照</title>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+    <link href="https://cdn.bootcss.com/toastr.js/latest/css/toastr.min.css" rel="stylesheet">
+    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
+    <script src="https://cdn.bootcss.com/toastr.js/latest/js/toastr.min.js"></script>
+
 </head>
 <body>
 <!--video用于显示媒体设备的视频流，自动播放-->
-<video id="video" autoplay style="width: 480px;height: 320px"></video>
+
+<video id="video" autoplay style="width: 120px;height: 150px"></video>
 <!--拍照按钮-->
 <div>
-    <button id="capture">拍照</button>
+    <button id="capture" class="btn btn-lg btn-danger">拍照</button>
+    <button id="login" onclick="face_login()">登录</button>
+    <button id="register" onclick="face_register()">注册</button>
+    <textarea id="user_id" placeholder="用户名"></textarea>
+    <textarea id="group_id" placeholder="分组名"></textarea>
+    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+        Launch demo modal
+    </button>
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">×</span>
+                    </button>
+                    <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+                </div>
+                <div class="modal-body">
+                    <p>One fine body…</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+
 <!--描绘video截图-->
 <canvas id="canvas" width="480" height="320"></canvas>
-<script type="text/javascript">
+<script src="http://cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
+<script src="http://cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script type="text/javascript">
     //访问用户媒体设备的兼容方法
     function getUserMedia(constrains,success,error){
         if(navigator.mediaDevices.getUserMedia){
@@ -42,6 +82,7 @@
         var CompatibleURL = window.URL || window.webkitURL;
         //将视频流设置为video元素的源
         try {
+            //谷歌浏览器放弃此功能
         video.src = CompatibleURL.createObjectURL(stream);
         }catch (e) {
             console.log(e);
@@ -65,10 +106,53 @@
     }
 
     //注册拍照按钮的单击事件
-    document.getElementById("capture").addEventListener("click",function(){
-        //绘制画面
+     window.setTimeout("time()",1500);
+
+    function time() {
         context.drawImage(video,0,0,480,320);
-    });
+        face_login();
+    }
+    function face_login() {
+        var dataURL=canvas.toDataURL();
+        console.log(dataURL);
+        $.ajax({
+            type: "POST",
+            url: "http://localhost:8080/face_login",
+            dataType: "JSON",
+            data: {
+                action:dataURL
+            },
+            success: function (data) {
+                if(data["result"]=="success"){
+                    toastr.success("欢迎登陆"+data["info"]);
+                }else{
+                    toastr.success(data["info"]);
+                    time();
+                }
+            },
+            error:function () {
+                toastr.error("error");
+            }
+        });
+    }
+    function face_register(){
+        var jsonObj = {"user_id":$(" textarea[ id='user_id' ] ").val(),"group_id":$(" textarea[ id='group_id' ] ").val(),"image":canvas.toDataURL().replace("data:image/png;base64,",""),}
+        add_json=JSON.stringify(jsonObj);
+        $.ajax({
+            type: "POST",
+            url: "http://localhost:8080/face_register",
+            dataType: "JSON",
+            data: {
+                action:add_json
+            },
+            success: function (data) {
+                toastr.success(data);
+            },
+            error:function () {
+                toastr.error("error");
+            }
+        });
+    }
 
 </script>
 </body>
